stop using custom font (it's pretty hard to read)

--- a/roles/deploy/files/web/css/style.css
+++ b/roles/deploy/files/web/css/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:200');
-
 * {
     --color-primary: hsl(204, 100%, 80%);
     --color-primary-accent: hsl(204, 30%, 50%);
@@ -142,7 +140,6 @@ select
     border-left: transparent;
     border-right: transparent;
     border-top: transparent;
-    font-size: 16px;
     background-color: rgb(34, 34, 34);
 }
 
@@ -150,7 +147,7 @@ select
 {
     float: left;
     display: flex;
-    height: 24px;
+    height: 20px;
     margin: 1px 1px;
 }
 
@@ -224,7 +221,7 @@ label,
 select
 {
     color:white;
-    font-family: 'Source Code Pro', monospace;
+    font-family: monospace;
     margin: 0px 20px;
 }
 
@@ -296,7 +293,7 @@ li
 /* Footer text */
 #c
 {
-    font-size: 13px;
+    font-size: 10px;
 }
 
 /* Images/Video embeds */
